# glam_matrix_extras

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  mat_ext.rs  ops.rs  symmetric_mat2.rs  symmetric_mat3.rs  symmetric_mat6.rs
src/eigen/: mod.rs  symmetric_eigen2.rs  symmetric_eigen3.rs
src/matrices/: mat23.rs  mat32.rs  mod.rs  symmetric_mat2.rs  symmetric_mat3.rs  symmetric_mat4.rs  symmetric_mat5.rs  symmetric_mat6.rs
src/symmetric_mat/: mod.rs  symmetric_mat2.rs  symmetric_mat3.rs
