[package]
name = "glam_mat_extensions"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Joona Aalto <jondolf.dev@gmail.com>"]
description = "Matrix types and utilities for Glam."
documentation = "https://docs.rs/glam_mat_extensions"
repository = "https://github.com/Jondolf/glam_mat_extensions"
readme = "README.md"
keywords = ["gamedev", "math", "matrix"]
categories = ["game-development", "science", "simulation"]

[features]
default = ["f32", "f64"]

# Enable single-precision floating point types.
f32 = []

# Enable double-precision floating point types.
f64 = []

# Enable reflection using `bevy_reflect`.
bevy_reflect = ["dep:bevy_reflect"]

# Enable data serialization/deserialization using `serde`.
serialize = ["dep:serde", "glam/serde"]

# Enable `approx` to approximate floating point equality comparisons and assertions for types.
approx = ["dep:approx", "glam/approx"]

[dependencies]
# Math
approx = { version = "0.5", optional = true }
glam = "0.29"

# Reflection
bevy_reflect = { version = "0.16", optional = true }
serde = { version = "1.0", optional = true, features = ["serde_derive"] }

[dev-dependencies]
# Enable `approx` for testing.
glam_mat_extensions = { path = "./", features = ["approx"] }

[lints.clippy]
alloc_instead_of_core = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
